# Arkhe

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  NOTICE  OPTIMIZATION_README.md  OPTIMIZATION_REPORT.md  QUICKSTART.md  README.md  REFATORACAO.md  _migrate_imports.py  _test_refactor.py  check_backend.py  check_import.py  install.sh  pyproject.toml  rlm.toml  rlm_rust.pyi  test_optimized.py  test_optimized_parsing.py  testes_e_segrança.md
.github/workflows/: README.md  style.yml
LICENSES/: upstream-rlm-mit.txt
_migrated_to_ts/: README.md
_migrated_to_ts/plugins/: slack.py  telegram.py  whatsapp.py
_migrated_to_ts/server/: backpressure.py  operator_bridge.py  scheduler.py  whatsapp_gateway.py
docs/: GATEWAY_ARCHITECTURE_REFERENCE.md  analise-packages-ts-para-python.md  analise-recursao-subagentes-geracao-python.md  analise-rlm-velocidade-multiprocess.md  analise-ultimos-3-commits-rlm.md  arquitetura-config-multidevice.md  arquitetura-multichannel-unificada.md  comparativo-original-vs-editado.md  concorrencia-multi-cliente.md  gaps-openclaw.md  getting-started.md  horizonte-skills-agentes-sif.md  integracao-python-typescript-rust.md  logging.md  padroes-industria-auth-multichamadas.md  plano-comunicacao-recursao.md  plano-correcao-trajetoria-rlm.md  refactoring-local-repl.md  refactoring-sub-rlm.md  refatoracao_mixin_pos_mortem.md  rlm-runtime-reality-analysis.md  roadmap-mobile-ios-android.md  runtime-workbench-phases.md  seguranca-rede-e-multiconexoes.md  vscode_integration.md
docs/analise-clean-room-rlm/: 00-inventario-estrutural.md  01-core-engine-memory.md  02-daemon-gateway-server.md  03-cli-tools-skills.md  04-tests-docs-schemas-native.md  05-guia-qa-clean-room.md  99-lista-completa-de-arquivos-relevantes.md  README.md
docs/api/: rlm.md
docs/architecture/: ADR-001-canonical-ownership.md  ADR-002-envelope-pipeline.md  ADR-003-auth-layers.md  ADR-004-python-canonical.md  asas.md  global_knowledge_base.md  inventario-donos-duplicados.md  layer-violations-inventory.md  mapa-dispatch-paths.md  plano-correcao-arquitetural-v2.md  session-delivery-contract.md
docs/contracts/: runtime-projection-usage.md
docs/refatoracao/: runtime-core-fase-0.md
examples/: daytona_repl_example.py  docker_repl_example.py  lm_in_prime_repl.py  lm_in_repl.py  modal_repl_example.py  riemann_research.py
fine_tuning/: COLAB_STEPS.md  dataset_rlm_code.json  qwen3_5_rlm_qlora.yaml  run_parallel_tests.py  run_single_test.py  run_t05_only.py  test_baseline.py  test_baseline_gpt5mini.py
native/arkhe-audit/: Cargo.toml
native/arkhe-audit/src/: chain.rs  error.rs  lib.rs  log.rs
native/arkhe-bash/: Cargo.toml
native/arkhe-bash/src/: bash.rs  error.rs  lib.rs  sandbox.rs  validation.rs
native/arkhe-mcts/: Cargo.toml
native/arkhe-memory/: Cargo.toml
native/arkhe-memory/src/: hnsw.rs  lib.rs  pybridge.rs  sparse.rs  vecmath.rs
native/arkhe-policy-core/: Cargo.toml
native/arkhe-vault/: Cargo.toml
native/arkhe-vault/src/: encryption.rs  error.rs  lib.rs  vault.rs
native/arkhe-wire/: Cargo.toml
rlm/: __init__.py  __main__.py  logging.py  session.py
rlm/cli/: __init__.py  (+12 more)
rlm_rust/: Cargo.toml  build_admin.bat
rlm_rust/src/: comms.rs  handler.rs  lib.rs  parsing.rs
schemas/: README.md  envelope.v1.json  health-report.v1.json  permission-policy.v1.json  runtime-projection.v1.json  session-identity.v1.json  tool-spec.v1.json  ws-protocol.v1.json
scripts/: check_layer_imports.py  simulate_rlm_architectures.py
test_outputs/: live_riemann_parallel_trace copy 2.md  live_riemann_parallel_trace copy 3.md  live_riemann_parallel_trace copy.md  live_riemann_parallel_trace.md  live_riemann_trace.md
tests/: conftest.py  riemann.md  riemann2.md  test_backend_verification.py  test_channel_bootstrap.py  test_channel_console.py  test_channels.py  test_cli.py  test_critical_gateway.py  test_critical_phase10.py  test_critical_phase8.py  test_critical_skills.py  test_critical_skills_new.py  test_critical_subrlm.py  test_critical_subrlm_parallel.py  test_envelope_schema.py  test_execution_policy.py  test_gap_a_b_security.py  test_gap_fixes.py  test_gateway_infra.py  test_handoff.py  test_imports.py  test_infra_phase10.py  test_introspection_tools.py  test_invariants_context.py  test_invariants_coordination.py  test_invariants_dispatch.py  test_invariants_multichannel.py  test_knowledge_base.py  test_live_llm.py  test_live_riemann.py  test_live_riemann_parallel.py  test_local_repl_persistent.py  test_logger_runtime.py  test_mcts.py  test_memory_cohesion.py  test_memory_corrections_s15_17.py  test_message_bus.py  test_multi_turn_integration.py  test_obsidian_bridge.py  (+26 more)
(+321 files in other folders)
