[package]
name = "rlm_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rlm_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
regex = "1.11"
once_cell = "1.20"
bytes = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
