[package]
name = "arkhe-audit"
version = "0.1.0"
edition = "2021"
description = "Log de auditoria append-only com cadeia de hashes SHA-256 para o ecossistema RLM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
