[package]
name = "arkhe-memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "arkhe_memory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
ordered-float = "4"
unicode-normalization = "0.1"
