[package]
name = "arkhe-vault"
version = "0.1.0"
edition = "2021"
description = "Vault de segredos com criptografia AES-256-GCM para o ecossistema RLM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
